# clifwrap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  noxfile.py  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pages.yml  release-please.yml  release-pr-validation.yml  release.yml
docs/: RESEARCH.md  cli-reference.md  configuration.md  index.md  migration.md  operations.md  provider-catalog.md  release.md
docs/plans/: 2026-06-29-001-feat-quota-aware-gating-plan.md
docs/schemas/: release-manifest.v1.json
packaging/pyinstaller/: entrypoint.py
scripts/: build_pages.py  firecrawl_login_sequence.py  firecrawl_requested_accounts.py  firecrawl_requested_accounts.toml  generate_cli_reference.py  generate_provider_catalog.py  tavily_dynamic_research_loop.py  verify_release.py
src/clifwrap/: __init__.py  __main__.py  accounts.py  config.py  install.py  providers.toml  runtime.py  scheduling.py  state.py
tests/: test_wrapper.py
